--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
   },
   "dependencies": {
     "gatsby": "^2.22.5",
+    "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-transformer-sharp": "^3.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0"
   },
   "devDependencies": {
